# deloop

./: .clang-format  .clang-format-include  .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  README.md  bindings.rs  build.rs  meson.build  rustfmt.toml
desktop/: Cargo.toml  README.md  TODO.md
desktop/src/deloop/: common.rs  mod.rs  track_manager.rs
desktop/src/gui/: control_panel.rs  mod.rs  track_interface.rs
mk0/: CLAUDE.md  CMakeLists.txt  README.md  default.nix  result  shell.nix  test.json
mk0/cmake/: SEGGER_RTT.cmake  STM32CubeF4.cmake  arm-none-eabi-gcc.cmake
mk0/proto/: command.proto  log.options  log.proto  stream.proto
mk0/python/: command_pb2.py  log_pb2.py  log_table.json  repl.py  requirements.txt  setup.py  stream_pb2.py  uart_stream.py  utils.py
mk0/python/deloop_mk0/: log_pb2.py  log_table.json  repl.py  uart_stream.py
mk0/scripts/: create_log_table.py  debug.sh  flash.sh  release_python_artifacts.sh  stm32f4.gdb
mk0/src/: errors.hpp  logging.cpp  logging.hpp  main.cpp  rtos_hooks.cpp  uart_stream.cpp  uart_stream.hpp
mk0/src/audio/: luts.hpp  scheduler.cpp  scheduler.hpp  stream.cpp  stream.hpp
mk0/src/audio/routines/: sine.cpp  sine.hpp
mk0/src/board/: stm32f4xx_hal_msp.c  stm32f4xx_it.c  stm32f4xx_it.h  system_stm32f4xx.c
mk0/src/config/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
mk0/src/drv/: wm8960.hpp  wm8960_stm32f4.cpp  wm8960_stm32f4xx.cpp
mk0/src/linker/: STM32F446RE_FLASH.ld
mk0/src/startup/: startup_stm32f446xx.s
mk0/src/tasks/: play_sine_wave.cpp  tasks.hpp
mk0/tests/: CMakeLists.txt  test_log_table.py
mk0/tests/cpp/: test_wm8960.cpp  utils.cpp
mk0/tests/python/: test_log_table.py
src/: bizzy.c  bizzy.h  deloop.rs  gui.rs  main.c  main.rs  midi_output.c  util.rs
src/bizzy/: client.c  client.h  logging.c  logging.h  track.c  track.h
src/deloop/: bridge.rs  client.c  client.cc  client.h  common.rs  counter.rs  logging.c  logging.cc  logging.h  mod.rs  synth.rs  track.c  track.h  track.rs  track_manager.rs
src/deloop/synth/: basic.rs
src/gui/: control_panel.rs  io_selector.rs  mod.rs  track_interface.rs
