[package]
name = "deloop"
version = "0.1.0"
edition = "2021"

[dependencies]
autocxx = "0.27.0"
clap = { version = "4.5.18", features = ["derive"] }
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1" }
env_logger = "0.11.5"
jack = "0.13.0"
libc = "0.2.158"
serde = "1.0.210"
serde_json = "1.0.128"

[build-dependencies]
autocxx-build = "0.27.0"
bindgen = "0.70.1"
cc = "1.1.15"
cxx = "1.0.129"
cxx-build = "1.0.129"
miette = { version = "5", features = ["fancy"] }
pkg-config = "0.3.30"
