[package]
name = "deloop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
eframe = { version = "0.28.1", features = ["persistence"] }
egui = { version = "0.28.1" }
env_logger = "0.11.5"
jack = "0.13.0"
log = "0.4.22"
serde = "1.0.210"
serde_json = "1.0.128"
snafu = "0.8.5"
