[package]
name = "deloop"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
eframe = { version = "0.29.0", features = ["persistence"] }
egui = { version = "0.29.0" }
env_logger = "0.11.5"
jack = "0.13.0"
log = "0.4.22"
snafu = "0.8.5"
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
regex = "1.11.1"
gpui = { git = "https://github.com/zed-industries/zed" }
